# soldering_station_firmware

./: .gdbinit  .gitignore  Cargo.toml  README.md  flash.sh
.cargo/: config.toml
src/: main.rs  thermistor.rs
