[package]
name = "soldering_station"
version = "0.1.0"
authors = ["nicguzzo@gmail.com"]
#edition = "2021"
edition = "2018"
resolver = "2"

[dependencies]
#embedded-hal = "0.2.7"
#cortex-m = "0.7.4"
#cortex-m-rt = "0.7.1"
#cortex-m-rtic = "1.1.2"
#panic-semihosting = "0.6.0"
#cortex-m-semihosting = "0.5.0"
#micromath = "2.0.0"
#embedded-graphics = "0.7.1"
#ssd1306 = "0.7.0"
#arrform = "0.1.1"
#thermocouple = { version="0.1.3", default-features = false, features = ["k-type", "f32","extrapolate"]}
#pid = "3.0.0"
#rotary-encoder-hal = "0.5.0"
#[dependencies.stm32f1xx-hal]
#version = "0.9.0"
#features = ["rt", "stm32f103", "medium"]

defmt = "0.3"
defmt-rtt = "0.3"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
nb = "1.0.0"
embedded-graphics = "0.7.1"
ssd1306 = "0.7.0"
micromath = "2.0.0"
arrform = "0.1.1"
thermocouple = { version="0.1.3", default-features = false, features = ["k-type", "f32","extrapolate"]}
pid = "3.0.0"
#rotary-encoder-hal = "0.5.0"


[dependencies.embassy]
version = "0.1.0"
path = "../embassy/embassy" 
features = ["defmt", "defmt-timestamp-uptime"] 

[dependencies.embassy-stm32]
version = "0.1.0"
path = "../embassy/embassy-stm32"
features = ["nightly", "defmt", "stm32f103c8", "unstable-pac", "memory-x", "time-driver-any","exti"]

[profile.dev]
opt-level = "s"

